--- a/page_user.html
+++ b/page_user.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <!-- link do css -->
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
     <style>
         .input-icon-wrapper {
             position: relative;
@@ -52,12 +53,24 @@
             }
 
             .carousel-control-prev-icon {
-                margin-left: -60px;
+                margin-left: -30px;
             }
 
             .carousel-control-next-icon {
-                margin-right: -60px;
+                margin-right: -30px;
             }
+
+            .card {
+                margin-left: 5px;
+            }
+        }
+
+        .carousel-control-prev-icon {
+            margin-left: -60px;
+        }
+
+        .carousel-control-next-icon {
+            margin-right: -60px;
         }
 
         .container {
@@ -75,21 +88,34 @@
         .btn {
             font-size: 0.9rem;
             border-radius: 15px;
+            transition: ease 0.3s;
+            border-radius: 15px;
+        }
+
+        .btn:hover {
+            color: #000000;
+        }
+
+        td .btn {
+            width: 100px;
+            border-radius: 0px;
         }
 
         .custom-btn {
             background-color: #594432;
             color: #FFFFFF;
             font-size: 0.9rem;
-
+            transition: 0.3s ease;
         }
 
         .custom-btn:hover {
             background-color: #8A694E;
+            color: #000000;
         }
 
         h1.text-center {
             color: #FFFFFF;
+            font-family: lemonada, sans-serif;
             text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
         }
 
@@ -99,6 +125,68 @@
             object-fit: cover;
             border-radius: 10px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        }
+
+        .badge {
+            color: #42825D;
+            font-size: 1rem;
+        }
+
+        .badge.warning {
+            color: #AD3939;
+        }
+
+        .card {
+            background-color: #594432;
+            color: #FFFFFF;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        }
+
+        .table thead th {
+            color: #FFFFFF;
+            background-color: #594432;
+            padding: 10px;
+        }
+
+        .row {
+            max-width: 100%;
+        }
+
+        .status {
+            width: 110px !important;
+        }
+
+        .btn-custom {
+            background-color: #594432;
+            color: #FFFFFF;
+            transition: ease 0.3s;
+        }
+
+        .btn-custom:hover {
+            background-color: #8A694E;
+            color: #000000;
+        }
+
+        .modal-header {
+            background-color: #594432;
+            color: #FFFFFF;
+        }
+
+        .modal-body input,
+        .modal-body select {
+            background-color: #BFB8AE;
+        }
+
+        .modal-body .btn-modal {
+            background-color: #A27E60;
+            border-radius: 0px;
+            color: #FFFFFF;
+            transition: ease 0.3s;
+        }
+
+        .modal-body .btn-modal:hover {
+            background-color: #C8C3BC;
+            color: #000000;
         }
     </style>
 </head>
@@ -137,7 +225,7 @@
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExemplo"
                     data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon"></span>
+                    <span class="carousel-control-prev-icon seta"></span>
                 </button>
                 <button class="carousel-control-next" type="button" data-bs-target="#carouselExemplo"
                     data-bs-slide="next">
@@ -206,7 +294,7 @@
         <h1 class="text-center mb-4 mt-4">Peças Disponiveis</h1>
         <div class="col-12 col-md-10 col-lg-8">
             <div class="card">
-                <div class="card-body">
+                <div class="card-body p-0">
                     <div class="table-responsive">
                         <table class="table table-striped table-hover">
                             <thead>
@@ -215,7 +303,7 @@
                                     <th>Nome</th>
                                     <th>Marca</th>
                                     <th>Disponibilidade</th>
-                                    <th>Status</th>
+                                    <th class="status">ALugar/Calcular</th>
                                 </tr>
                             </thead>
                             <tbody>
@@ -224,12 +312,13 @@
                                             class="table-img"></td>
                                     <td>Vestido floral branco Feminino</td>
                                     <td>Beach Club</td>
-                                    <td><span class="badge bg-success">Disponível</span></td>
+                                    <td><span class="badge">Disponível</span></td>
                                     <td>
-                                        <button class="btn btn-danger btn-sm" data-bs-toggle="modal"
-                                            data-bs-target="#modalCalculo1">Calcular</button>
-                                        <button class="btn btn-primary btn-sm" data-bs-toggle="modal"
-                                            data-bs-target="#modalAlugarPeca1">Alugar</button>
+                                        <button class="btn btn-custom btn-sm mb-3 mt-3" data-bs-toggle="modal"
+                                            data-bs-target="#modalCalculo1"><i class="bi bi-calculator">
+                                                Calcular</i></button>
+                                        <button class="btn btn-success btn-sm" data-bs-toggle="modal"
+                                            data-bs-target="#modalAlugarPeca1"><i class="bi bi-bag"> Alugar</i></button>
                                     </td>
                                 </tr>
                                 <tr>
@@ -237,12 +326,13 @@
                                             class="table-img"></td>
                                     <td>Blazer Preto Masculino</td>
                                     <td>COOFANDY</td>
-                                    <td><span class="badge bg-success">Disponível</span></td>
+                                    <td><span class="badge">Disponível</span></td>
                                     <td>
-                                        <button class="btn btn-danger btn-sm" data-bs-toggle="modal"
-                                            data-bs-target="#modalCalculo1">Calcular</button>
-                                        <button class="btn btn-primary btn-sm" data-bs-toggle="modal"
-                                            data-bs-target="#modalAlugarPeca2">Alugar</button>
+                                        <button class="btn btn-custom btn-sm mb-3 mt-3" data-bs-toggle="modal"
+                                            data-bs-target="#modalCalculo1"><i class="bi bi-calculator">
+                                                Calcular</i></button>
+                                        <button class="btn btn-success btn-sm" data-bs-toggle="modal"
+                                            data-bs-target="#modalAlugarPeca2"><i class="bi bi-bag"> Alugar</i></button>
                                     </td>
                                 </tr>
                                 <tr>
@@ -250,12 +340,13 @@
                                             class="table-img"></td>
                                     <td>Vestido Casamento Delicado</td>
                                     <td>St. Patrick</td>
-                                    <td><span class="badge bg-success">Disponível</span></td>
+                                    <td><span class="badge">Disponível</span></td>
                                     <td>
-                                        <button class="btn btn-danger btn-sm" data-bs-toggle="modal"
-                                            data-bs-target="#modalCalculo1">Calcular</button>
-                                        <button class="btn btn-primary btn-sm" data-bs-toggle="modal"
-                                            data-bs-target="#modalAlugarPeca3">Alugar</button>
+                                        <button class="btn btn-custom btn-sm mb-3 mt-3" data-bs-toggle="modal"
+                                            data-bs-target="#modalCalculo1"><i class="bi bi-calculator">
+                                                Calcular</i></button>
+                                        <button class="btn btn-success btn-sm" data-bs-toggle="modal"
+                                            data-bs-target="#modalAlugarPeca3"><i class="bi bi-bag"> Alugar</i></button>
                                     </td>
                                 </tr>
                                 <tr>
@@ -263,12 +354,13 @@
                                             class="table-img"></td>
                                     <td>Camiseta Branca Linho Masculina</td>
                                     <td>Urban Basics</td>
-                                    <td><span class="badge bg-warning">Indisponível</span></td>
+                                    <td><span class="badge warning">Indisponível</span></td>
                                     <td>
-                                        <button class="btn btn-danger btn-sm" data-bs-toggle="modal"
-                                            data-bs-target="#modalCalculo1">Calcular</button>
-                                        <button class="btn btn-primary btn-sm" data-bs-toggle="modal"
-                                            data-bs-target="#modalAlugarPeca4">Alugar</button>
+                                        <button class="btn btn-custom btn-sm mb-3 mt-3" data-bs-toggle="modal"
+                                            data-bs-target="#modalCalculo1"><i class="bi bi-calculator">
+                                                Calcular</i></button>
+                                        <button class="btn btn-success btn-sm" data-bs-toggle="modal"
+                                            data-bs-target="#modalAlugarPeca4"><i class="bi bi-bag"> Alugar</i></button>
                                     </td>
                                 </tr>
                                 <tr>
@@ -276,12 +368,13 @@
                                             class="table-img"></td>
                                     <td>Sobretudo Longo chocolate</td>
                                     <td>Tchê Inverno</td>
-                                    <td><span class="badge bg-warning">Indisponível</span></td>
+                                    <td><span class="badge warning">Indisponível</span></td>
                                     <td>
-                                        <button class="btn btn-danger btn-sm" data-bs-toggle="modal"
-                                            data-bs-target="#modalCalculo1">Calcular</button>
-                                        <button class="btn btn-primary btn-sm" data-bs-toggle="modal"
-                                            data-bs-target="#modalAlugarPeca5">Alugar</button>
+                                        <button class="btn btn-custom btn-sm mb-3 mt-3" data-bs-toggle="modal"
+                                            data-bs-target="#modalCalculo1"><i class="bi bi-calculator">
+                                                Calcular</i></button>
+                                        <button class="btn btn-success btn-sm" data-bs-toggle="modal"
+                                            data-bs-target="#modalAlugarPeca5"><i class="bi bi-bag"> Alugar</i></button>
                                     </td>
                                 </tr>
                             </tbody>
@@ -293,6 +386,9 @@
     </div>
     </div>
 
+
+    <!-- MODAIS -->
+    <!-- MODAL PEÇA 1 -->
     <div class="modal fade" id="modalAlugarPeca1" tabindex="-1" aria-labelledby="modalAlugarLabel1" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content bg-light">
@@ -319,7 +415,7 @@
                         <input type="date" class="form-control mb-2">
                         <label class="form-label">Data de devolução</label>
                         <input type="date" class="form-control mb-3">
-                        <button class="btn btn-primary w-100" type="submit">Alugar Peça</button>
+                        <button class="btn btn-modal w-100" type="submit">Alugar Peça</button>
                     </form>
                 </div>
             </div>
@@ -345,7 +441,7 @@
                         <input type="date" class="form-control mb-2">
                         <label class="form-label">Data de devolução</label>
                         <input type="date" class="form-control mb-3">
-                        <button class="btn btn-outline-primary w-100" type="submit">Calcular Previsão</button>
+                        <button class="btn btn-outline btn-modal w-100" type="submit">Calcular Previsão</button>
                     </form>
                 </div>
             </div>
@@ -378,7 +474,7 @@
                         <input type="date" class="form-control mb-2">
                         <label class="form-label">Data de devolução</label>
                         <input type="date" class="form-control mb-3">
-                        <button class="btn btn-primary w-100" type="submit">Alugar Peça</button>
+                        <button class="btn btn-modal w-100" type="submit">Alugar Peça</button>
                     </form>
                 </div>
             </div>
@@ -403,7 +499,7 @@
                         <input type="date" class="form-control mb-2">
                         <label class="form-label">Data de devolução</label>
                         <input type="date" class="form-control mb-3">
-                        <button class="btn btn-outline-primary w-100" type="submit">Calcular Previsão</button>
+                        <button class="btn btn-outline btn-modal w-100" type="submit">Calcular Previsão</button>
                     </form>
                 </div>
             </div>
@@ -436,7 +532,7 @@
                         <input type="date" class="form-control mb-2">
                         <label class="form-label">Data de devolução</label>
                         <input type="date" class="form-control mb-3">
-                        <button class="btn btn-primary w-100" type="submit">Alugar Peça</button>
+                        <button class="btn btn-modal w-100" type="submit">Alugar Peça</button>
                     </form>
                 </div>
             </div>
@@ -461,7 +557,7 @@
                         <input type="date" class="form-control mb-2">
                         <label class="form-label">Data de devolução</label>
                         <input type="date" class="form-control mb-3">
-                        <button class="btn btn-outline-primary w-100" type="submit">Calcular Previsão</button>
+                        <button class="btn btn-outline btn-modal w-100" type="submit">Calcular Previsão</button>
                     </form>
                 </div>
             </div>
@@ -494,7 +590,7 @@
                         <input type="date" class="form-control mb-2">
                         <label class="form-label">Data de devolução</label>
                         <input type="date" class="form-control mb-3">
-                        <button class="btn btn-primary w-100" type="submit">Alugar Peça</button>
+                        <button class="btn btn-modal w-100" type="submit">Alugar Peça</button>
                     </form>
                 </div>
             </div>
@@ -519,7 +615,7 @@
                         <input type="date" class="form-control mb-2">
                         <label class="form-label">Data de devolução</label>
                         <input type="date" class="form-control mb-3">
-                        <button class="btn btn-outline-primary w-100" type="submit">Calcular Previsão</button>
+                        <button class="btn btn-outline btn-modal w-100" type="submit">Calcular Previsão</button>
                     </form>
                 </div>
             </div>
@@ -552,7 +648,7 @@
                         <input type="date" class="form-control mb-2">
                         <label class="form-label">Data de devolução</label>
                         <input type="date" class="form-control mb-3">
-                        <button class="btn btn-primary w-100" type="submit">Alugar Peça</button>
+                        <button class="btn btn-modal w-100" type="submit">Alugar Peça</button>
                     </form>
                 </div>
             </div>
@@ -577,12 +673,24 @@
                         <input type="date" class="form-control mb-2">
                         <label class="form-label">Data de devolução</label>
                         <input type="date" class="form-control mb-3">
-                        <button class="btn btn-outline-primary w-100" type="submit">Calcular Previsão</button>
+                        <button class="btn btn-outline btn-modal w-100" type="submit">Calcular Previsão</button>
                     </form>
                 </div>
             </div>
         </div>
     </div>
+
+    <footer style="background-color: #2a1e15; color: #fff; padding: 20px 10px; text-align: center; margin-top: 30px;">
+        <div style="margin-bottom: 10px; font-size: 22px;">
+            <a href="#" style="color: #fff; margin: 0 15px;"><i class="fab fa-instagram"></i></a>
+            <a href="#" style="color: #fff; margin: 0 15px;"><i class="fab fa-facebook-f"></i></a>
+            <a href="#" style="color: #fff; margin: 0 15px;"><i class="fab fa-whatsapp"></i></a>
+        </div>
+        <p style="color: #fff; font-size: 14px;">
+            La Vie Elegance © 2025 - Contato: <a href="mailto:clothes@lavieelegance.com"
+                style="color: #fff; text-decoration: none;">clothes@lavieelegance.com</a>
+        </p>
+    </footer>
 
 
 
