--- a/page_adm.html
+++ b/page_adm.html
@@ -159,6 +159,10 @@
             color: white;
             background-color: antiquewhite;
         }
+
+        label.form-label {
+            color: #000000;
+        }
     </style>
 </head>
 
